# Hexelment

./: Cargo.toml  README.md
.cargo/: config.toml
src/: config.rs  main.rs
src/components/: player.rs
src/plugins/: camera.rs  mod.rs  terrain.rs
src/plugins/designer/: init.rs  interact.rs  mod.rs
src/resources/: audio.rs  designer.rs  menu.rs  mod.rs  terrain.rs
src/scenes/: main_menu.rs  mod.rs
wasm/: index.html
