[package]
name = "hexelment"
version = "0.1.0"
edition = "2021"
license = "MIT"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.11.3"
bevy_asset_loader = "0.17.0"
bevy_ecs_tilemap = { version = "0.11.0", features = ["atlas"] }
bevy-inspector-egui = "0.20.0"
bevy_kira_audio = { version = "0.17.0", features = ["ogg"] }
bevy_pancam = "0.9"
lazy_static = "1.4.0"
wasm-bindgen = "0.2.88"
